@@ -1,30 +1,23 @@
 package com.booleanuk.core;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Library {
-    List<Article> articles;
-    List<Book> books;
-    List<Newspaper> newspapers;
+    List<Product> products = new ArrayList<>();
 
-    public void addToStock(Article item) {
-        this.articles.add(item);
+    public Library() {}
+
+
+    public void addToStock(Product product) {
+        this.products.add(product);
     }
 
-    public void addToStock(Book item) {
-        this.books.add(item);
-    }
-
-    public void addToStock(Newspaper item) {
-        this.newspapers.add(item);
-    }
-
-    // The following methods may contain code that you are unfamiliar with. The strange syntax of article -> something
-    // is called a lambda expression (https://www.w3schools.com/java/java_lambda.asp)
-    public String checkInArticle(String title) {
-        List<Article> filtered = this.articles.stream()
-                .filter(article -> article.title.equals(title))
-                .toList();
+    public String checkInProduct(String title) {
+        List<Product> filtered = this.products.stream()
+                .filter(product -> product.title.equals(title))
+                .collect(Collectors.toList());
 
         if (filtered.size() < 1) {
             return "item is not part of the library's collection";
@@ -33,10 +26,11 @@ public class Library {
         return filtered.get(0).checkIn();
     }
 
-    public String checkOutArticle(String title) {
-        List<Article> filtered = this.articles.stream()
-                .filter(article -> article.title.equals(title))
-                .toList();
+
+    public String checkOutProduct(String title) {
+        List<Product> filtered = this.products.stream()
+                .filter(product -> product.title.equals(title))
+                .collect(Collectors.toList());
 
         if (filtered.size() < 1) {
             return "item is not part of the library's collection";
@@ -45,51 +39,8 @@ public class Library {
         return filtered.get(0).checkOut();
     }
 
-    public String checkInBook(String title) {
-        List<Book> filtered = this.books.stream()
-                .filter(book -> book.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkIn();
+    public int getProductCount() {
+        return products.size();
     }
 
-    public String checkOutBook(String title) {
-        List<Book> filtered = this.books.stream()
-                .filter(book -> book.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkOut();
-    }
-
-    public String checkInNewspaper(String title) {
-        List<Newspaper> filtered = this.newspapers.stream()
-                .filter(newspaper -> newspaper.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkIn();
-    }
-
-    public String checkOutNewspaper(String title) {
-        List<Newspaper> filtered = this.newspapers.stream()
-                .filter(newspaper -> newspaper.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkOut();
-    }
 }
